--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 
 <footer>
 	<div class="footer-container">
-		<div><a href="https://github.com/lysenkoaa" target="_blank">lysenkoaa</a></div>
+		<div class="github"><a href="https://github.com/lysenkoaa" target="_blank">lysenkoaa</a></div>
 		<div>Copyright ©2023 All rights reserved</div>
-		<div><a href="https://rs.school/js-en/" target="_blank">RS School JS</a></div>
+		<div class="rs-school"><a href="https://rs.school/js-en/" target="_blank"></a></div>
 	</div>
 </footer>
 </body>
