feat: add code and project examples

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 			<li><a href="#experience">Work Experience</a></li>
 			<li><a href="#education">Education</a></li>
 			<li><a href="#languages">Languages</a></li>
+			<li><a href="#code-examples">Code</a></li>
+			<li><a href="#project-examples">Projects</a></li>
 		</ul>
 	</nav>
 
@@ -50,7 +52,7 @@
 			<h2>Work Experience:</h2>
 			<ul>
 				<li>Creation of websites and information systems</li>
-				<li>Administration of operating systems, networks, and databases</li>
+				<li>Administration of operating systems, networks and databases</li>
 				<li>Programming and development of desktop applications</li>
 			</ul>
 		</section>
@@ -66,8 +68,34 @@
 		<section id="languages">
 			<h2>Languages:</h2>
 			<ul>
-				<li>Russian - Native</li>
-				<li>English - B2</li>
+				<li>Russian – Native</li>
+				<li>English – B2</li>
+			</ul>
+		</section>
+
+		<section id="code-examples">
+			<h2>Code examples:</h2>
+			<pre><code>function displayPersonDetails(person) {
+  for (let key in person) {
+    if (person.hasOwnProperty(key)) {
+      console.log(`${key}: ${person[key]}`);
+    }
+  }
+}
+
+let person = {
+  firstName: "Aleksandr",
+  lastName: "Lysenko",
+  profession: "Software Developer"
+};
+
+displayPersonDetails(person);</code></pre>
+		</section>
+
+		<section id="project-examples">
+			<h2>Project examples:</h2>
+			<ul>
+				<li><a href="https://lysenkoaa.github.io/rsschool-cv/">https://lysenkoaa.github.io/rsschool-cv/</a></li>
 			</ul>
 		</section>
 	</main>
