feat: add photo block

--- a/index.html
+++ b/index.html
@@ -10,23 +10,27 @@
 
 <body>
 <div class="container">
-	<nav>
-		<ul>
-			<li><a href="#summary">Summary</a></li>
-			<li><a href="#skills">Skills</a></li>
-			<li><a href="#experience">Work Experience</a></li>
-			<li><a href="#education">Education</a></li>
-			<li><a href="#languages">Languages</a></li>
-			<li><a href="#code-examples">Code</a></li>
-			<li><a href="#project-examples">Projects</a></li>
-		</ul>
-	</nav>
-
 	<header>
-		<h1>Aleksandr Lysenko</h1>
-		<div id="contact-details">
-			<p><strong>Localization:</strong> Kyrgyzstan, Bishkek</p>
-			<p><strong>Telegram:</strong> <a href="https://t.me/AldrLyko" target="_blank">@AldrLyko</a></p>
+		<nav>
+			<ul>
+				<li><a href="#summary">Summary</a></li>
+				<li><a href="#skills">Skills</a></li>
+				<li><a href="#experience">Work Experience</a></li>
+				<li><a href="#education">Education</a></li>
+				<li><a href="#languages">Languages</a></li>
+				<li><a href="#code-examples">Code</a></li>
+				<li><a href="#project-examples">Projects</a></li>
+			</ul>
+		</nav>
+		<div class="base-info">
+			<div class="contact-details">
+				<h1>Aleksandr Lysenko</h1>
+				<p><strong>Localization:</strong> Kyrgyzstan, Bishkek</p>
+				<p><strong>Telegram:</strong> <a href="https://t.me/AldrLyko" target="_blank">@AldrLyko</a></p>
+			</div>
+			<div class="photo">
+				<img src="assets/cv/me.jpg" alt="My photo">
+			</div>
 		</div>
 	</header>
 
